--- a/AddTwoNumbers/app/src/main/res/layout/activity_main.xml
+++ b/AddTwoNumbers/app/src/main/res/layout/activity_main.xml
@@ -24,14 +24,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="40dp"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="64dp"
         android:layout_marginRight="40dp"
         android:ems="10"
         android:hint="Enter a Number"
         android:inputType="number"
+        android:maxLength="9"
         android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/viewSum" />
 
@@ -44,6 +44,7 @@
         android:layout_marginRight="40dp"
         android:ems="10"
         android:hint="Enter a Number"
+        android:maxLength="9"
         android:inputType="number"
         android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
