--- a/SimpleCalculator/app/src/main/res/layout/activity_main.xml
+++ b/SimpleCalculator/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,7 @@
         android:layout_marginTop="51dp"
         android:ems="10"
         android:hint="Enter first number"
+        android:maxLength="9"
         android:inputType="number"
         android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,6 +41,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:ems="10"
+        android:maxLength="9"
         android:hint="Enter Second Number"
         android:inputType="number"
         android:minHeight="48dp"
