--- a/DisplayMultiplicationTable/app/src/main/res/layout/activity_main.xml
+++ b/DisplayMultiplicationTable/app/src/main/res/layout/activity_main.xml
@@ -11,10 +11,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="68dp"
+        android:layout_marginTop="144dp"
         android:ems="10"
         android:hint="@string/enter_number"
         android:inputType="numberSigned"
+        android:maxLength="9"
         android:minHeight="48dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -24,7 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="61dp"
-        android:layout_marginTop="68dp"
+        android:layout_marginTop="116dp"
         android:text="@string/table"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -38,9 +39,24 @@
         android:layout_marginTop="68dp"
         android:paddingLeft="25dp"
         android:paddingRight="25dp"
-        android:text="@string/your_table"
         android:textSize="24sp"
+        android:hint="Table is here"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edtText" />
+
+    <EditText
+        android:id="@+id/countEdt"
+        android:layout_width="wrap_content"
+
+        android:layout_height="wrap_content"
+        android:layout_marginTop="71dp"
+        android:ems="10"
+        android:hint="Enter the count"
+        android:inputType="numberSigned"
+        android:minHeight="48dp"
+        app:layout_constraintEnd_toStartOf="@+id/tableBtn"
+        app:layout_constraintHorizontal_bias="0.21"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
